# rust_read_ecs_table

./: Cargo.toml
src/: main.rs
