[package]
name = "read-gecs-tables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "0.12.2"
tokio = { version = "1", features = ["macros", "full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
odbc = "0.17"
chrono = "0.4"
